# discool

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.toml  docker-compose.dev.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  security.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-initialize-project-scaffold-and-serve-spa.md  1-2-configuration-system-and-structured-logging.md  1-3-database-connection-and-migration-system.md  1-4-health-check-and-metrics-endpoints.md  1-5-first-run-admin-setup-screen.md  1-6-instance-health-dashboard.md  1-7-data-export-and-backup.md  1-8-docker-and-deployment-pipeline.md  2-1-client-side-keypair-generation-and-identity-creation.md  2-2-challenge-response-authentication-and-session-management.md  2-3-identity-persistence-and-auto-login.md  2-4-display-name-and-avatar-management.md  2-5-cross-instance-identity-verification.md  2-6-optional-email-association.md  4-4-channel-categories.md  (+52 more)
client/: README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
server/: Cargo.toml  build.rs
server/.cargo/: audit.toml
server/migrations/: 0001_initial_schema.sql  0002_instance_and_admin.sql  0003_create_users.sql  0004_create_sessions.sql  0005_user_profile_avatar_metadata.sql  0006_recovery_email_association.sql  0007_email_verification_attempts.sql  0008_identity_recovery_tokens.sql  0009_discovered_instances.sql  0010_create_guilds.sql  0011_create_channels.sql  0012_create_channel_categories.sql  0013_create_guild_invites.sql  0014_create_guild_members.sql  0015_create_roles_and_role_assignments.sql  0016_backfill_default_role_permission_bitflags.sql  0017_create_channel_permission_overrides.sql  0018_create_messages.sql  0019_add_messages_cursor_index.sql  0020_create_message_reactions.sql  0021_create_message_attachments.sql  0022_create_message_embeds.sql  0023_create_dm_channels.sql  0024_create_dm_messages.sql  0025_create_user_blocks.sql  0026_create_moderation_actions.sql  0027_enable_kick_moderation_actions.sql  0028_create_guild_bans_and_enable_ban_actions.sql  0029_enable_voice_kick_moderation_actions.sql  0030_expand_moderation_actions_for_log_view.sql  0031_add_moderated_message_soft_delete_fields.sql  0032_create_reports_table.sql  0033_report_lifecycle_tracking.sql
server/patches/libp2p-yamux/: Cargo.toml  README.md
server/patches/libp2p-yamux/src/: lib.rs
server/src/: error.rs  lib.rs  main.rs  static_files.rs
server/src/config/: mod.rs  settings.rs
server/src/db/: backend.rs  migrate.rs  mod.rs  pool.rs
server/src/handlers/: admin.rs  auth.rs  categories.rs  channels.rs  dms.rs  guilds.rs  health.rs  instance.rs  invites.rs  messages.rs  mod.rs  moderation.rs  roles.rs  users.rs  ws.rs
server/src/identity/: challenge.rs  did.rs  keypair.rs  mod.rs
server/src/middleware/: auth.rs
server/src/models/: category.rs  channel.rs  channel_permission_override.rs  dm_channel.rs  dm_message.rs  guild.rs  guild_ban.rs  guild_invite.rs  guild_member.rs  message.rs  message_attachment.rs  message_embed.rs  message_reaction.rs  mod.rs  moderation.rs  recovery_email.rs  role.rs  session.rs  user.rs  user_block.rs
server/src/p2p/: discovery.rs  gossip.rs  identity.rs  mod.rs  node.rs  sybil.rs
server/src/permissions/: mod.rs
server/src/services/: auth_service.rs  category_service.rs  channel_service.rs  dm_service.rs  email_service.rs  embed_service.rs  file_storage_service.rs  guild_invite_service.rs  guild_service.rs  message_service.rs  mod.rs  moderation_service.rs  p2p_event_service.rs  presence_service.rs  recovery_email_service.rs  role_service.rs  user_account_deletion_service.rs  user_block_service.rs  user_data_export_service.rs  user_profile_service.rs
server/src/webrtc/: mod.rs  signaling.rs  turn.rs  voice_channel.rs
server/src/ws/: gateway.rs  mod.rs  protocol.rs  registry.rs
server/tests/: database_sqlite_in_memory.rs  p2p_gossip_inter_instance.rs  p2p_sybil_controls.rs  server_binds_to_configured_port.rs
(+126 files in other folders)
