[package]
name = "discool-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-prometheus = "0.10"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15", features = ["toml"] }
ed25519-dalek = { version = "2", features = ["alloc"] }
dashmap = "6"
rand = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "macros", "postgres", "sqlite", "migrate", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
